fix auto scroll when focus editor on Firefox

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   overscroll-behavior: contain;
+  overflow-y: auto;
 }
 
 .no-select {
